fix about-slide padding on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -838,6 +838,10 @@
     }
   }
 
+  .about-slide {
+    padding: 8rem 0.5rem 5rem 0.5rem !important;
+  }
+
   .projects-slide {
     .project-desc {
       width: 100% !important;
